# face

./: CMakeLists.txt  README.md  face.pro  livevideo.cpp  livevideo.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
opentld/libopentld/: CMakeLists.txt
opentld/libopentld/tld/: Clustering.cpp  DetectorCascade.cpp  EnsembleClassifier.cpp  EnsembleClassifier.h  NormalizedPatch.h  TLD.cpp  TLD.h  TLDUtil.cpp
opentld/opentld/: CMakeLists.txt
opentld/opentld/main/: Main.cpp
tldinterface/: CMakeLists.txt  tldclassify.cpp  tldclassify.h  tlddatabase.cpp  tlddatabase.h  tldface.cpp  tldface.h  tldinterface.cpp  tldinterface.h  tldrecognition.cpp  tldrecognition.h
